@@ -20,9 +20,7 @@ steamcmd.exe +force_install_dir "%path%" +login anonymous +app_update 380870 -be
 5. Run the batch file once. If error, run it again.
 6. Open the `StartServer64.bat` file in your favorite text editor, edit the `-Xmx and -Xms` part to your suitable RAM config. For example:
 ```batch
-".\jre64\bin\java.exe" -Djava.awt.headless=true -Dzomboid.steam=1 -Dzomboid.znetlog=1 -XX:+UseZGC -XX:-CreateCoredumpOnCrash 
--XX:-OmitStackTraceInFastThrow -Xms4G -Xmx6G -Djava.library.path=natives/;natives/win64/;. 
--cp %PZ_CLASSPATH% zombie.network.GameServer -statistic 0
+-Xms4G -Xmx6G
 ```
 7. In this example, use 4G-6G config if your RAM is 8GB.
 8. Save that file.
